--- a/Styles.css
+++ b/Styles.css
@@ -29,8 +29,7 @@ html{
 }
 .navbar.sticky{
     padding: 15px 20px;
-    background-color: #526BCF;
-    background-color: red;
+    background-color: #434343;
     /* -webkit-backdrop-filter: blur(100px);
   backdrop-filter: blur(100px); */
 }
@@ -95,7 +94,7 @@ position: relative;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     /* background: url("./Resource/background.jpg") no-repeat center; */
-    background: #434343;
+    background: black;
     width: 100%;
     background-size: auto;
     height: 100vh;
@@ -200,15 +199,17 @@ section{
     transform: translateX(-50%);
 
 }
+/* projects started */
+
 .project .title::after{
-    content: "Here are a few projects.";
+    content: "";
     position: absolute;
     bottom: -10px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    /* color: crimson; */
     padding: 5px;
-    background: #fff;
+    /* background: #fff; */
     transform: translateX(-50%);
 
 }
@@ -344,13 +345,16 @@ width: 45%;
     margin-bottom: 170px;
 }
 #projects-1,#projects-2{
-    width: 90%;
-    background:gray;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    width: 95%;
+    padding: 50px;
+    background:#434343;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     /* margin-bottom: 170px; */
+    border-radius: 20px;
 }
 .project-s >.image>img{
     width: 100%;
+    border-radius: 20px;
 }
 .project-s{
     padding: 20px;
@@ -383,7 +387,7 @@ width: 45%;
     /* border: 1px solid red; */
 }
 .project-s>.paragraph>h1{
-    color: crimson;
+    color: #8BB3AC;
     margin: auto;
     text-align: center;
     font-family: 'Poppins',sans-serif;
@@ -411,20 +415,20 @@ width: 45%;
     gap: 10px;
     color: white;
     /* display: inline-block; */
-    background:crimson ;
-    color: white;
+    background:#8BB3AC ;
+    color: black;
     font-size: 12px;
     padding: 12px  36px;
     margin-top: 20px;
     border-radius:6px ;
-    border: 2px solid crimson;
+    border: 2px solid #8BB3AC;
     transition: all 0.3s ease;
 }
 .project-s>.paragraph>div>a:hover{
-    color: crimson;
+    /* color: black; */
     background: none;
     border-radius: 6px ;
-    border:6 px solid crimson;
+    /* border:6 px solid crimson; */
 }
 /* Contact Details */
 .contact-s{
@@ -502,11 +506,11 @@ width: 45%;
   
   .calendar {
       font-family: 'Poppins',sans-serif;
-      /* border: 1px solid #DDDDDD; */
-      border-radius: 3px;
+      border-radius:20px;
+      /* background-color: #047526; */
       min-height: 243px;
       text-align: center;
-      margin: 0 auto;
+      margin:auto;
       width: 85%;
   }
  
@@ -670,7 +674,7 @@ width: 45%;
     justify-content: center;
 }
 form{
-    background: white;
+    background: grey;
     display: flex;
     flex-direction: column;
     padding: 2vw 4vw;
@@ -690,11 +694,12 @@ form input,form textarea{
     outline: none;
     background: #f5f5f5;
     font-size: 16px;
+    border-radius: 20px;
 }
 form button{
     padding: 15px;
-    background: #ff5361;
-    color: white;
+    background: 8BB3AC;
+    color: black;
     font-size: 18px;
     border: none;
     cursor: pointer;
@@ -708,18 +713,29 @@ form button{
     font-size: 20px;
     margin-bottom: 40px;
 }
-.links a{
-    display: flex;
-    flex-direction: column;
+/* .links{
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+} */
+.links img{
+    /* display: flex;
+    flex-direction: column; */
     /* padding: 20px; */
-    color: white;
+    /* color: white;
     font-family: 'Poppins',sans-serif;
-    font-size: 20px;
+    font-size: 20px; */
+    width: 80px;
+    height: 80px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px;
 }
 
-.links a{
+/* .links a{ */
     /* display: inline-block; */
-    text-align: center;
+    /* text-align: center;
     background:crimson ;
     color: white;
     font-size: 25px;
@@ -727,8 +743,8 @@ form button{
     margin-top: 20px;
     border-radius:6px ;
     border: 2px solid crimson;
-    transition: all 0.3s ease;
-}
+    transition: all 0.3s ease; */
+/* } */
 .links a:hover{
     color: white;
     background: none;
@@ -829,6 +845,7 @@ text-align: center;
         height: 350px;
         width: 350px;
     }
+
     .home-content{
         padding-left: 70px;
     }
