--- a/Styles.css
+++ b/Styles.css
@@ -831,6 +831,12 @@ text-align: center;
     margin-top: -70px;
     display: block;
 }
+.github{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 20px;
+    padding: 15px;
+}
 /* media responsive */
 @media (max-width:1300px ){
     .home .max-width{
