--- a/Styles.css
+++ b/Styles.css
@@ -341,10 +341,10 @@ width: 45%;
 }
 
 /* project styling*/
-#projects-1{
+#projects-1,#projects-2,#projects-3,#projects-4{
     margin-bottom: 170px;
 }
-#projects-1,#projects-2{
+#projects-1,#projects-2,#projects-3,#projects-4{
     width: 95%;
     padding: 50px;
     background:#434343;
